# VISP

./: .gitignore  AGENT_DISPATCH.md  ANIMATED-SVG-SKILL.md  CLAUDE.md  QUICK_START.md  SKILL.md  animated-svg-evals.json  evals.json
visp-tasker/backend/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  VISP_API_GUIDE.md  VISP_OPS_GUIDE.md  alembic.ini  check_taxonomy_db.py  cloudflared-config.yml  debug_serialization.py  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  seed_taxonomy_remote.py  simulate_tracking.py
visp-tasker/backend/alembic/: env.py
visp-tasker/backend/migrations/: 001_create_users.sql  002_create_providers.sql  003_create_taxonomy.sql  004_create_verification.sql  005_create_jobs.sql  006_create_sla.sql  007_create_pricing.sql  008_create_reviews.sql  009_chat_messages.sql  010_add_profile_address_stripe.sql  011_pricing_model_v2.sql  add_certification_required.sql  set_task_credential_flags.sql
visp-tasker/backend/scripts/: backfill_provider_levels.py  healthcheck.sh  migrate.py  seed.py  seed_db.py
visp-tasker/backend/seeds/: categories.json  commission_schedules.json  pricing_rules.json  review_dimensions.json  sla_profiles.json  tasks_level_1.json  tasks_level_2.json  tasks_level_3.json  tasks_level_4.json  test_users.json
visp-tasker/backend/src/: main.py
visp-tasker/backend/src/algorithms/: providerRanking.py
visp-tasker/backend/src/api/: deps.py
visp-tasker/backend/src/core/: config.py
visp-tasker/backend/src/events/: jobEvents.py  penaltyEvents.py
visp-tasker/backend/tests/: conftest.py
(+297 files in other folders)
